<resources>
    <string name="app_name">Riding Rails</string>
    <string name="main_button_plan_trip">Plan My Trip</string>
    <string name="trip_options_cell_price">$%1$.2f</string>
    <string name="trip_options_title_label">Trip Options For:</string>
    <string name="trip_options_no_response_body">Response body not found</string>
    <string name="no_internet_connection">Could not connect to the internet, please check your device settings.</string>
    <string name="trip_options_cell_arrow_icon_description">Arrow icon indicating this cell can be clicked</string>
    <string name="trip_options_favourite_icon_description">Star icon to favourite this trip</string>
    <string name="trip_options_text_to">to</string>
    <string name="activity_main_hint_origin">Origin</string>
    <string name="activity_main_hint_destination">Destination</string>
    <string name="activity_main_favourite_list_text">Trip journey from %1$s to %2$s</string>
    <string name="activity_main_list_cell_favourites_icon_journey_description">Supporting icon showing a journey</string>
    <string name="activity_main_list_cell_favourites_icon_tap_me_description">Arrow icon indicating this cell can be tapped</string>
    <string name="fragment_stop_search_input_box_hint">Enter stop name</string>
    <string name="list_cell_stop_search_modes_label">Available Modes:</string>
    <string name="list_cell_platform_details_time_label_est_dep">Estimated Departure: </string>
    <string name="list_cell_platform_details_time_label_pln_dep">Planned Departure: </string>
    <string name="list_cell_platform_details_time_label_est_arr">Estimated Arrival: </string>
    <string name="list_cell_platform_details_time_label_pln_arr">Planned Arrival: </string>

    <plurals name="minutes_from_now">
        <item quantity="one">%d min</item>
        <item quantity="other">%d mins</item>
    </plurals>

    <plurals name="hours_from_now">
        <item quantity="one">%d hr</item>
        <item quantity="other">%d hrs</item>
    </plurals>

    <plurals name="days_from_now">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>

    <plurals name="interchanges">
        <item quantity="one">%d Interchange</item>
        <item quantity="other">%d Interchanges</item>
    </plurals>
</resources>