<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/journeyIcon"
        android:layout_width="@dimen/list_cell_favourite_trip_icon_dimens"
        android:layout_height="@dimen/list_cell_favourite_trip_icon_dimens"
        android:src="@drawable/journey_icon"
        android:contentDescription="@string/activity_main_list_cell_favourites_icon_journey_description"
        android:layout_marginTop="@dimen/grid_box_margin"
        android:layout_marginStart="@dimen/grid_box_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/stopName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_font_size_normal"
        android:layout_margin="@dimen/grid_box_margin"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toEndOf="@id/journeyIcon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/clickCellIcon"
        tools:text="Central Station"/>

    <TextView
        android:id="@+id/stopSuburb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_font_size_minor"
        android:layout_margin="@dimen/grid_box_margin"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toEndOf="@id/journeyIcon"
        app:layout_constraintTop_toBottomOf="@id/stopName"
        app:layout_constraintEnd_toStartOf="@id/clickCellIcon"
        tools:text="Sydney"/>

    <TextView
        android:id="@+id/modesLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_font_size_minor"
        android:layout_margin="@dimen/grid_box_margin"
        android:text="@string/list_cell_stop_search_modes_label"
        android:textAlignment="textStart"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toEndOf="@id/journeyIcon"
        app:layout_constraintTop_toBottomOf="@id/stopSuburb"
        app:layout_constraintEnd_toStartOf="@id/clickCellIcon"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/availableModesList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toStartOf="@id/modesLabel"
        app:layout_constraintEnd_toEndOf="@id/modesLabel"
        app:layout_constraintTop_toBottomOf="@id/modesLabel"/>

    <ImageView
        android:id="@+id/clickCellIcon"
        android:layout_width="@dimen/list_cell_trip_option_icon_dimens"
        android:layout_height="@dimen/list_cell_trip_option_icon_dimens"
        android:src="@drawable/list_trip_options_details_arrow"
        android:contentDescription="@string/activity_main_list_cell_favourites_icon_tap_me_description"
        android:layout_marginEnd="@dimen/grid_box_margin"
        app:layout_constraintTop_toTopOf="@id/journeyIcon"
        app:layout_constraintEnd_toEndOf="parent"/>
</merge>